--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>Orion - Lab Reservation Tool</title>
-  <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.svg" /> -->
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <!-- Meta Tags-->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
